--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.4.2",
+    "next": "^16.0.7",
     "openai": "^5.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
